--- a/css/events.scss
+++ b/css/events.scss
@@ -10,7 +10,7 @@ $secondary: #009f93;
 }
 
 .event-card {
-  border: 1px solid $primary;
+  border: 2px solid $primary;
   border-radius: 5px;
 
   .image-container {
@@ -22,7 +22,73 @@ $secondary: #009f93;
   }
 
   .event-card-inner {
-    padding: 1em;
+
+    .inner-item {
+      padding: 1rem;
+    }
+
+    h3,
+    p {
+      margin: 0;
+    }
+
+    .modal-link,
+    .booking-link {
+      display: block;
+      padding: .5rem 1rem;
+      background: $primary;
+      color: #FFF;
+      border-radius: 3px;
+      margin: 1rem;
+      text-align: center;
+
+      &:hover {
+        background: darken($primary, 10%);
+      }
+    }
+
+    .booking-link {
+      background: $secondary;
+
+      &:hover {
+        background: darken($secondary, 10%);
+      }
+    }
+
+    .fas {
+      font-family: 'FontAwesome' !important;
+    }
+
+    .fa-info-circle,
+    .fa-ticket {
+      font-size: 1.3em;
+      position: relative;
+      top: 2px;
+      padding-left: 5px;
+    }
+
+    .fa-ticket::before {
+      content: "\f145";
+    }
+
+    .event-label {
+      font-size: .9rem;
+      margin: 0;
+      padding-bottom: .25em;
+    }
+
+    .event-dates,
+    .event-times,
+    .event-location {
+      border-bottom: 1px solid rgba($primary, .3);
+      padding: .5rem 1rem;
+      text-transform: uppercase;
+    }
+
+    p:last-child {
+      border: none;
+      padding-bottom: 2em;
+    }
   }
 }
 
