--- a/css/events.scss
+++ b/css/events.scss
@@ -5,7 +5,7 @@ $secondary: #009f93;
   margin-bottom: 2em;
 }
 
-@media (min-width: 768px) {
+@media all and (min-width: 768px) {
   .events-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -100,6 +100,22 @@ $secondary: #009f93;
   }
 }
 
+// modal popup
 .hidden-description {
   display: none;
+  text-align: left;
+}
+
+@media all and (min-width: 768px) {
+  .description-header {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2em;
+    margin-bottom: 2em;
+
+    h3 {
+      display: flex;
+      align-self: center;
+    }
+  }
 }
