--- a/css/additions-2020.css
+++ b/css/additions-2020.css
@@ -1,18 +1,31 @@
+.hanging-local-page .c-section-header {
+  font-size: 2em;
+  padding: 0; }
+  @media screen and (min-width: 768px) {
+    .hanging-local-page .c-section-header {
+      font-size: 3em;
+      padding: 1em 0 .6em; } }
 .hanging-local-page section {
   border-bottom: 1px solid #0073ae;
-  margin: 1em 0;
-  padding-bottom: 1em; }
-  .hanging-local-page section.c-intro p {
-    margin: auto;
-    font-family: "Montserrat",sans-serif;
-    font-size: 1.2em;
-    line-height: 160%; }
+  margin: 2em 0;
+  padding-bottom: 3em; }
+  .hanging-local-page section.c-intro {
+    padding: 0; }
+    .hanging-local-page section.c-intro p {
+      font-family: "Montserrat",sans-serif;
+      font-size: 1.2em;
+      line-height: 160%; }
+      @media screen and (max-width: 768px) {
+        .hanging-local-page section.c-intro p {
+          margin-bottom: 1em; } }
     @media screen and (max-width: 768px) {
-      .hanging-local-page section.c-intro p {
-        margin: 1em; } }
+      .hanging-local-page section.c-intro {
+        padding-bottom: 1em; } }
 
 .c-grid-layout.c-grid-layout__two-column {
   grid-template-columns: 1fr 1fr; }
+.c-grid-layout.c-grid-layout__three-column {
+  grid-template-columns: 1fr 1fr 1fr; }
 .c-grid-layout.c-grid-layout__gap-1em {
   grid-gap: 1em; }
 .c-grid-layout.c-grid-layout__gap-2em {
@@ -23,7 +36,78 @@
   .c-grid-layout {
     display: grid; } }
 .c-grid-layout.c-grid-layout__two-column-hanging-intro {
-  grid-template-columns: 1.5fr 1fr;
-  justify-items: center; }
+  display: block;
+  justify-items: center;
+  background: #5f090d;
+  background: #FFF;
+  grid-template-columns: 1fr; }
+  @media screen and (min-width: 980px) {
+    .c-grid-layout.c-grid-layout__two-column-hanging-intro {
+      display: grid;
+      grid-template-columns: 1.5fr 1fr; } }
+  .c-grid-layout.c-grid-layout__two-column-hanging-intro div {
+    margin: auto; }
+  .c-grid-layout.c-grid-layout__two-column-hanging-intro img {
+    margin-bottom: 1.5em; }
+  .c-grid-layout.c-grid-layout__two-column-hanging-intro p, .c-grid-layout.c-grid-layout__two-column-hanging-intro h3, .c-grid-layout.c-grid-layout__two-column-hanging-intro a {
+    color: #FFF;
+    color: #5f090d;
+    font-weight: 600; }
+  .c-grid-layout.c-grid-layout__two-column-hanging-intro h3 {
+    font-size: 1.2em;
+    line-height: 140%; }
+  @media screen and (min-width: 768px) {
+    .c-grid-layout.c-grid-layout__two-column-hanging-intro h3 {
+      font-size: 2em; }
+    .c-grid-layout.c-grid-layout__two-column-hanging-intro img {
+      margin-bottom: 3em; } }
+  .c-grid-layout.c-grid-layout__two-column-hanging-intro a {
+    text-decoration: underline; }
+
+.c-videos .video {
+  margin: 0;
+  border: none;
+  padding-bottom: 5em;
+  position: relative; }
+  .c-videos .video h5,
+  .c-videos .video h4,
+  .c-videos .video p {
+    align-self: start; }
+  @media screen and (max-width: 768px) {
+    .c-videos .video {
+      margin-bottom: 1em; } }
+  .c-videos .video h5 {
+    margin-top: .5em;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #ef3e22;
+    border-bottom: 2px solid; }
+  .c-videos .video:nth-child(2n+0) h5 {
+    color: #58bbac; }
+  .c-videos .video p {
+    margin: 0 0 .5em 0;
+    line-height: 150%; }
+  .c-videos .video .booking-link {
+    margin-top: .5em;
+    font-family: 'Open Sans';
+    font-weight: 900;
+    font-size: 1.2em;
+    padding: 12px;
+    background: #0073ae;
+    color: #FFF;
+    display: block;
+    border-radius: 3px;
+    text-align: center;
+    text-transform: uppercase;
+    position: absolute;
+    width: 100%;
+    bottom: 0; }
+    .c-videos .video .booking-link:hover {
+      background: #00517b; }
+
+.gallery .gallery-item {
+  display: none; }
+  .gallery .gallery-item:first-child {
+    display: block; }
 
 /*# sourceMappingURL=additions-2020.css.map */
