--- a/css/additions-2020.scss
+++ b/css/additions-2020.scss
@@ -14,6 +14,10 @@ $hang-aqua: #58bbac;
 // font-family: 'durus';
 // font-family:"Montserrat",sans-serif;
 
+html {
+  scroll-behavior: smooth;
+}
+
 .hanging-local-page {
 
   .c-section-header {
@@ -21,7 +25,7 @@ $hang-aqua: #58bbac;
     padding: 0;
 
     @media screen and (min-width: $tablet) {
-      font-size: 3em;
+      font-size: 2.5em;
       padding: 1em 0 .6em;
     }
   }
@@ -33,7 +37,7 @@ $hang-aqua: #58bbac;
 
     &.c-intro {
 
-      padding: 0;
+      padding: 0 0 2em 0;
 
       p {
         //margin: auto;
@@ -67,6 +71,10 @@ $hang-aqua: #58bbac;
     grid-template-columns: 1fr 1fr 1fr;
   }
 
+  &.c-grid-layout__four-column {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
   &.c-grid-layout__gap-1em { grid-gap: 1em }
   &.c-grid-layout__gap-2em { grid-gap: 2em }
   &.c-grid-layout__gap-3em { grid-gap: 3em }
@@ -90,6 +98,10 @@ $hang-aqua: #58bbac;
 
     div {
       margin: auto;
+
+      @media screen and (min-width: $tablet) {
+        margin-top: 2em;
+      }
     }
 
     img {
@@ -128,12 +140,9 @@ $hang-aqua: #58bbac;
 .c-videos {
 
   .video {
-    //border: 1px solid $grey;
-    //padding: 1.5em;
-    //border-radius: 5px;
     margin: 0;
     border: none;
-    //background: pink;
+    border-bottom: 1px solid $grey;
     padding-bottom: 5em;
     position: relative;
 
@@ -150,16 +159,19 @@ $hang-aqua: #58bbac;
     }
 
     h5 {
-      margin-top: .5em;
+      font-size: 1.25em;
+      margin: .5em 0;
       text-transform: uppercase;
-      font-weight: 600;
-      color: $hang-red;
+      font-weight: 500;
+      color: $primary;
       border-bottom: 2px solid;
-      
     }
 
-    &:nth-child(2n+0) h5 {
-      color: $hang-aqua;
+    h4 {
+      font-size: 1.6em;
+      color: $hang-red;
+      font-weight: 600;
+      line-height: 130%;
     }
 
     p {
@@ -168,26 +180,51 @@ $hang-aqua: #58bbac;
     }
 
     .booking-link {
-      margin-top: .5em;
-      font-family: 'Open Sans';
-      font-weight: 900;
-      font-size: 1.2em;
-      padding: 12px;
-      background: $primary;
-      color: $white;
-      display: block;
-      border-radius: 3px;
-      text-align: center;
-      text-transform: uppercase;
-
-      &:hover {
-        background: darken($primary, 10%);
-      }
-
       position: absolute;
       width: 100%;
-      bottom: 0;
+      bottom: 1em;
     }
+  }
+}
+
+.booking-link {
+  margin-top: .5em;
+  font-family: 'Open Sans';
+  font-weight: 900;
+  font-size: 1.2em;
+  padding: 12px;
+  background: $primary;
+  color: $white;
+  display: block;
+  border-radius: 3px;
+  text-align: center;
+  text-transform: uppercase;
+
+  &:hover {
+    background: darken($primary, 10%);
+    color: $white;
+  }
+
+  &.booking-link-lite {
+    background: $hang-aqua;
+    font-size: 1em;
+    padding: 5px;
+
+    &:hover {
+      background: darken($hang-aqua, 10%);
+    }
+  }
+
+  width: 100%;
+}
+
+.video-link {
+  color: $hang-red;
+  font-weight: 600;
+  text-decoration: underline;
+
+  &:hover {
+    color: darken($hang-red, 10%);
   }
 }
 
@@ -202,7 +239,78 @@ $hang-aqua: #58bbac;
   }
 }
 
+.c-gallery .gallery {
+  display: flex;
 
+  .gallery-item {
+    width: 100%!important;
+    max-width: none!important;
+    float: none!important;
+    clear: both;
+
+    .gallery-icon a img {
+
+    }
+  }
+}
+
+.c-friends {
+
+  .c-friends-intro {
+    font-size: 1.5em;
+    margin-bottom: 2em;
+    padding-bottom: 2em;
+  }
+
+  .c-grid-layout.c-grid-layout__three-column {
+    margin-bottom: 2em;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 2fr;
+    border-bottom: 1px solid;
+    padding-bottom: 2em;
+  }
+
+  p {
+    margin: 0;
+  }
+
+  /*
+  a {
+    background: #72c9bf;
+    color: #231f20;
+    text-align: center;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-family: 'Open Sans';
+    font-weight: 900;
+    margin: auto;
+    padding: 10px;
+    width: 100%;
+    display: block;
+    margin: 1em 0;
+
+    &:hover {
+      background: #231f20;
+      color: #72c9bf;
+    }
+  }
+  */
+}
+
+.c-friends-title {
+  font-size: 1.4em;
+  font-weight: 600;
+}
+
+.c-friends-intro {
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.c-intro-scroll-links {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
 
 
 
