--- a/css/additions-2020.scss
+++ b/css/additions-2020.scss
@@ -376,7 +376,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-
+.eat-drink-footer-logo {
+  display: inline-block;
+  width: 100%;
+  max-width: 280px;
+  height: 135px;background-size: 70% auto;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
 
 
 
